Use ViewModel and Orderby start date

--- a/Learny/Views/Courses/Index.cshtml
+++ b/Learny/Views/Courses/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Learny.Models.Course>
+﻿@model IEnumerable<Learny.ViewModels.CourseViewModel>
 
 @{
     ViewBag.Title = "Index";
