--- a/Learny/Views/Courses/Index.cshtml
+++ b/Learny/Views/Courses/Index.cshtml
@@ -32,7 +32,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Name)
+           @Html.ActionLink(Html.DisplayFor(modelItem => item.Name).ToString(), "Details", new { id = item.Id }) 
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CourseCode)
