--- a/Learny/Views/Shared/_Layout.cshtml
+++ b/Learny/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using Learny.Settings;
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -19,14 +21,18 @@
                 </button>
                 @Html.ActionLink("Learny", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            @*<div class="navbar-collapse collapse">
+            <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @if (User.IsInRole(RoleName.student))
+                    {
+                        <li>@Html.ActionLink("Kurs", "Index", "Home")</li>
+                    }
                 </ul>
-                @Html.Partial("_LoginPartial")
-            </div>*@
+                @if (User.Identity.IsAuthenticated)
+                {
+                    @Html.Partial("_LoginPartial")
+                }
+            </div>
         </div>
     </div>
     <div class="container body-content">
