add link to create module

--- a/Learny/Views/Courses/Details.cshtml
+++ b/Learny/Views/Courses/Details.cshtml
@@ -32,4 +32,5 @@
 <p>
     @Html.ActionLink("Ändra", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Tillbaka till listan", "Index") |
+    @Html.ActionLink("Lägg till modul", "Create", "CourseModules")
 </p>
