--- a/Learny/Views/Courses/Create.cshtml
+++ b/Learny/Views/Courses/Create.cshtml
@@ -1,18 +1,17 @@
 ﻿@model Learny.Models.Course
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Ny kurs";
 }
 
-<h2>Create</h2>
+<h2>Ny kurs</h2>
 
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>Course</h4>
+    <div class="form-horizontal">        
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -57,7 +56,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Spara" class="btn btn-default" />
             </div>
         </div>
     </div>
