--- a/Learny/Views/Shared/_Layout.cshtml
+++ b/Learny/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                     @if (User.IsInRole(RoleName.teacher))
                     {
                         <li>@Html.ActionLink("Kurser", "Index", "Home")</li>
-                        <li>@Html.ActionLink("Elever", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Elever", "TeacherCreateStudent", "Account")</li>
                         <li>@Html.ActionLink("Lärare", "Index", "Home")</li>
                     }
                 </ul>
