Add CourseCreateViewModel to ActionResult Create and create view

--- a/Learny/Views/Courses/Create.cshtml
+++ b/Learny/Views/Courses/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Learny.Models.Course
+﻿@model Learny.ViewModels.CourseCreateViewModel
 
 @{
     ViewBag.Title = "Ny kurs";
@@ -63,7 +63,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Tillbaka till listan", "Index")
 </div>
 
 @section Scripts {
