--- a/Learny/Views/Account/TeacherCreateStudent.cshtml
+++ b/Learny/Views/Account/TeacherCreateStudent.cshtml
@@ -1,12 +1,12 @@
 ﻿
 @model Learny.ViewModels.StudentVM
 @{
-    ViewBag.Title = "TeacherCreateStudent";
+    ViewBag.Title = "Create Student";
 }
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("TeacherCreateStudent", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("CreateStudent", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Lägg till en ny elev</h4>
@@ -14,6 +14,17 @@
     @Html.ValidationSummary("", new { @class = "text-danger" })
 
     @*@Html.DropDownLis*@
+    <div class="form-group">
+        @Html.LabelFor(model => model.Courses, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(c => c.Courses, new SelectList(Model.Courses,"Id", "Name"), "---- select a course ----")
+
+            @*@Html.EditorFor(model => model.Courses, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+            @Html.ValidationMessageFor(model => model.Courses, "", new { @class = "text-danger" })*@
+        </div>
+    </div>
+
+
 
     <div class="form-group">
         @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
