--- a/Learny/Views/Courses/Details.cshtml
+++ b/Learny/Views/Courses/Details.cshtml
@@ -32,5 +32,5 @@
 <p>
     @Html.ActionLink("Ändra", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Tillbaka till listan", "Index") |
-    @Html.ActionLink("Lägg till modul", "Create", "CourseModules")
+    @Html.ActionLink("Lägg till modul", "Create", "CourseModules", new { id = Model.Id }, null)
 </p>
