--- a/Learny/Views/CourseModules/Create.cshtml
+++ b/Learny/Views/CourseModules/Create.cshtml
@@ -46,14 +46,9 @@
             </div>
         </div>
 
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.CourseId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CourseId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CourseId, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
+        @Html.HiddenFor(model => model.CourseId) @*Http post courseId to create controller*@
+        
+       
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Spara" class="btn btn-default" />
@@ -62,9 +57,9 @@
     </div>
 }
 
-<div>
+@*<div>
     @Html.ActionLink("Tillbaka til listan", "Index")
-</div>
+</div>*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
