add client side validation for enddate

--- a/Learny/Views/Courses/Create.cshtml
+++ b/Learny/Views/Courses/Create.cshtml
@@ -65,4 +65,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Client Scripts/MvcFoolproofValidation.js"></script>
 }
