--- a/Learny/Views/Account/TeacherCreateStudent.cshtml
+++ b/Learny/Views/Account/TeacherCreateStudent.cshtml
@@ -11,16 +11,13 @@
     @Html.AntiForgeryToken()
     <h4>Lägg till en ny elev</h4>
     <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
+    @*@Html.ValidationSummary("", new { @class = "text-danger" })*@
 
-    @*@Html.DropDownLis*@
+
     <div class="form-group">
         @Html.LabelFor(model => model.Courses, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(c => c.Courses, new SelectList(Model.Courses,"Id", "Name"), "---- select a course ----")
-
-            @*@Html.EditorFor(model => model.Courses, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
-            @Html.ValidationMessageFor(model => model.Courses, "", new { @class = "text-danger" })*@
+            @Html.DropDownListFor(c => c.CourseId, new SelectList(Model.Courses, "Id", "Name"), "---- select a course ----")
         </div>
     </div>
 
@@ -30,6 +27,7 @@
         @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+           @* @Html.ValidationMessageFor(m => m.Name, "En student med samma namn är redan registrerad!", new { @class = "text-danger" })*@
         </div>
     </div>
 
@@ -38,6 +36,7 @@
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -45,15 +44,16 @@
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
         </div>
     </div>
 
     @*<div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>*@
+            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+            </div>
+        </div>*@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
