--- a/Learny/Views/StudentCourse/Index.cshtml
+++ b/Learny/Views/StudentCourse/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "StudentCourse";
 }
 
-<h2>Student index </h2>
+<h2>@Html.DisplayFor(model => model.Name) </h2>
 
 <div>
     <h4>Course..</h4>
