--- a/Learny/Views/ModuleActivities/Create.cshtml
+++ b/Learny/Views/ModuleActivities/Create.cshtml
@@ -28,7 +28,7 @@
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.ActivityTypeId,
                      new SelectList(Model.ActivityTypes, "Id", "Name"), "-- Välj aktivitetstyp --", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ActivityTypes, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.ActivityTypeId, "", new { @class = "text-danger" })
             </div>
         </div>
 
