--- a/Learny/Views/StudentCourse/Index.cshtml
+++ b/Learny/Views/StudentCourse/Index.cshtml
@@ -1,58 +1,20 @@
-﻿@model Learny.Models.Course
-
+﻿@model Learny.ViewModels.StudentCourseViewModel
 @{
-    ViewBag.Title = "StudentCourse";
+    ViewBag.Title = "Kurs";
 }
 
-<h2>@Html.DisplayFor(model => model.Name) </h2>
+<h2>@Html.DisplayFor(model => model.Name) @Html.DisplayFor(model => model.CourseCode)</h2>
 
-<div>
-    <h4>Course..</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CourseCode)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CourseCode)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
-
-    </dl>
-</div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    <h3>Beskrivning</h3>
+    @Html.DisplayFor(model => model.Description)
 </p>
+
+<p>
+    @Html.DisplayNameFor(model => model.StartDate):
+    @Html.DisplayFor(model => model.StartDate)
+    <br />
+    @Html.DisplayNameFor(model => model.EndDate):
+    @Html.DisplayFor(model => model.EndDate)
+</p>
+
