--- a/Learny/Views/StudentCourseModules/Index.cshtml
+++ b/Learny/Views/StudentCourseModules/Index.cshtml
@@ -1,57 +1,43 @@
-﻿@model IEnumerable<Learny.Models.CourseModule>
+﻿@model Learny.ViewModels.StudentCourseModuleViewModel
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = Model.Name;
 }
 
-<h2>Index</h2>
+<h2>@ViewBag.Title</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<div>
+    <hr />
+    <dl class="dl-horizontal">
+
+        <dt>            @Html.DisplayNameFor(model => model.Description)        </dt>
+        <dd>            @Html.DisplayFor(model => model.Description)        </dd>
+
+        <dt>            @Html.DisplayNameFor(model => model.StartDate)        </dt>
+        <dd>            @Html.DisplayFor(model => model.StartDate)        </dd>
+
+        <dt>            @Html.DisplayNameFor(model => model.EndDate)        </dt>
+        <dd>            @Html.DisplayFor(model => model.EndDate)        </dd>
+
+    </dl>
+</div>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CourseId)
-        </th>
+        <th>            Aktivitet       </th>
+        <th>            @Html.DisplayNameFor(model => model.Description)        </th>
+        <th>            @Html.DisplayNameFor(model => model.StartDate)        </th>
+        <th>            @Html.DisplayNameFor(model => model.EndDate)        </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StartDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EndDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CourseId)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model.Activities)
+    {
+        <tr>
+            <td>                @Html.DisplayFor(modelItem => item.Name)            </td>
+            <td>                @Html.DisplayFor(modelItem => item.Description)            </td>
+            <td>                @Html.DisplayFor(modelItem => item.StartDate)            </td>
+            <td>                @Html.DisplayFor(modelItem => item.EndDate)            </td>
+        </tr>
+    }
 
 </table>
