Add modules + links to index view

--- a/Learny/Views/StudentCourse/Index.cshtml
+++ b/Learny/Views/StudentCourse/Index.cshtml
@@ -18,3 +18,10 @@
     @Html.DisplayFor(model => model.EndDate)
 </p>
 
+<ul>
+    @foreach (var item in Model.Modules)
+    {
+        <li>@Html.ActionLink(item.Name, "Index", "StudentCourseModules", new { id = item.Id }, null)</li>
+    }
+</ul>
+
