--- a/Learny/Views/CourseModules/Details.cshtml
+++ b/Learny/Views/CourseModules/Details.cshtml
@@ -28,6 +28,6 @@
 
 <p>
     @Html.ActionLink("Ändra", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Tillbaka till listan", "Index") |
+    @Html.ActionLink("Tillbaka till kursen", "Details", "Courses", new { Id = Model.CourseId}, null) |
     @Html.ActionLink("Lägg till aktivitet", "Create", "ModuleActivities")
 </p>
