--- a/Learny/Views/CourseModules/Details.cshtml
+++ b/Learny/Views/CourseModules/Details.cshtml
@@ -29,5 +29,5 @@
 <p>
     @Html.ActionLink("Ändra", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Tillbaka till kursen", "Details", "Courses", new { Id = Model.CourseId}, null) |
-    @Html.ActionLink("Lägg till aktivitet", "Create", "ModuleActivities")
+    @Html.ActionLink("Lägg till aktivitet", "Create", "ModuleActivities", new { Id = Model.Id }, null)
 </p>
