--- a/Learny/Views/ModuleActivities/Create.cshtml
+++ b/Learny/Views/ModuleActivities/Create.cshtml
@@ -75,4 +75,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Client Scripts/MvcFoolproofValidation.js"></script>
 }
