--- a/Learny/Views/StudentCourse/Index.cshtml
+++ b/Learny/Views/StudentCourse/Index.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Learny.ViewModels.StudentCourseViewModel
 @{
-    ViewBag.Title = "Kurs";
+    ViewBag.Title = Model.Name;
 }
 
 <h2>@Html.DisplayFor(model => model.Name) @Html.DisplayFor(model => model.CourseCode)</h2>
 
 <p>
-    <h3>Beskrivning</h3>
     @Html.DisplayFor(model => model.Description)
 </p>
 
