--- a/Learny/Views/StudentCourse/Module.cshtml
+++ b/Learny/Views/StudentCourse/Module.cshtml
@@ -4,40 +4,24 @@
     ViewBag.Title = Model.Name;
 }
 
-<h2>@ViewBag.Title</h2>
+<h2>@Html.DisplayFor(model => model.Name)</h2>
 
-<div>
-    <hr />
-    <dl class="dl-horizontal">
+<p>
+    @Html.DisplayFor(model => model.Description)
+</p>
 
-        <dt>            @Html.DisplayNameFor(model => model.Description)        </dt>
-        <dd>            @Html.DisplayFor(model => model.Description)        </dd>
+<p>
+    @Html.DisplayNameFor(model => model.StartDate):
+    @Html.DisplayFor(model => model.StartDate)
+    <br />
+    @Html.DisplayNameFor(model => model.EndDate):
+    @Html.DisplayFor(model => model.EndDate)
+</p>
 
-        <dt>            @Html.DisplayNameFor(model => model.StartDate)        </dt>
-        <dd>            @Html.DisplayFor(model => model.StartDate)        </dd>
-
-        <dt>            @Html.DisplayNameFor(model => model.EndDate)        </dt>
-        <dd>            @Html.DisplayFor(model => model.EndDate)        </dd>
-
-    </dl>
-</div>
-<table class="table">
-    <tr>
-        <th>            Aktivitet       </th>
-        <th>            @Html.DisplayNameFor(model => model.Description)        </th>
-        <th>            @Html.DisplayNameFor(model => model.StartDate)        </th>
-        <th>            @Html.DisplayNameFor(model => model.EndDate)        </th>
-        <th></th>
-    </tr>
-
+<ul>
     @foreach (var item in Model.Activities)
     {
-        <tr>
-            <td>           @Html.ActionLink(Html.DisplayFor(modelItem => item.Name).ToString(), "Details", "ModuleActivities", new { id = item.Id }, null)     </td>
-            <td>                @Html.DisplayFor(modelItem => item.Description)            </td>
-            <td>                @Html.DisplayFor(modelItem => item.StartDate)            </td>
-            <td>                @Html.DisplayFor(modelItem => item.EndDate)            </td>
-        </tr>
+        <li>@Html.ActionLink(item.Name, "Activity", new { id = item.Id })</li>
     }
+</ul>
 
-</table>
