--- a/Learny/Views/StudentCourse/Activity.cshtml
+++ b/Learny/Views/StudentCourse/Activity.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = Model.Name;
 }
 
+<h5>@Html.DisplayFor(model => model.ActivityTypeName)</h5>
 <h2>@Html.DisplayFor(model => model.Name)</h2>
 
 <p>
