--- a/Learny/Views/ModuleActivities/Details.cshtml
+++ b/Learny/Views/ModuleActivities/Details.cshtml
@@ -1,12 +1,12 @@
-﻿@model Learny.ViewModels.ModuleAcivityCreateViewModel
+﻿@model Learny.ViewModels.ModuleActivityViewModel
 
 @{
     ViewBag.Title = "Details";
 }
 
+<h5>@Html.DisplayFor(model => model.ActivityTypeName)</h5>
 <h2>@Html.DisplayFor(model => model.Name)</h2>
 
-<h3>Beskrivning</h3>
 <p>@Model.Description</p>
 
 <p>
