--- a/Learny/Views/CourseModules/Details.cshtml
+++ b/Learny/Views/CourseModules/Details.cshtml
@@ -21,7 +21,7 @@
 <ul>
     @foreach (var item in Model.Activities)
     {
-        <li>@Html.ActionLink(item.Name, "Details", "ModuleActivities", new { id = item.Id }, null)</li>
+        <li>@Html.DisplayFor(modelItem => item.ActivityType.Name):  @Html.ActionLink(item.Name, "Details", "ModuleActivities", new { id = item.Id }, null)</li>
     }
 </ul>
 
