--- a/Learny/Views/Courses/Index.cshtml
+++ b/Learny/Views/Courses/Index.cshtml
@@ -27,9 +27,10 @@
     </tr>
 
 @foreach (var item in Model) {
+   
     <tr>
         <td>
-           @Html.ActionLink(Html.DisplayFor(modelItem => item.Name).ToString(), "Details", new { id = item.Id }) 
+           @Html.ActionLink(item.Name, "Details", new { id = item.Id }) 
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CourseCode)
