--- a/Learny/Views/StudentCourse/Index.cshtml
+++ b/Learny/Views/StudentCourse/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = Model.Name;
 }
 
-<h2>@Html.DisplayFor(model => model.Name) @Html.DisplayFor(model => model.CourseCode)</h2>
+<h2>@Html.DisplayFor(model => model.FullCourseName)</h2>
 
 <p>
     @Html.DisplayFor(model => model.Description)
