--- a/Learny/Views/Account/TeacherCreateStudent.cshtml
+++ b/Learny/Views/Account/TeacherCreateStudent.cshtml
@@ -17,7 +17,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Courses, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(c => c.CourseId, new SelectList(Model.Courses, "Id", "FullcourseName"), "---- välj en kurs från listan ----", new {@class = "form-control"})
+            @Html.DropDownListFor(c => c.CourseId, new SelectList(Model.Courses, "Id", "Name"), "---- välj en kurs från listan ----", new {@class = "form-control"})
         </div>
     </div>
 
