--- a/Learny/Views/Courses/Details.cshtml
+++ b/Learny/Views/Courses/Details.cshtml
@@ -36,6 +36,8 @@
         </div>
         <div class="col-sm-4">
 
+            <h2>Elever</h2>
+            <p>@Html.ActionLink("Lägg till elev", "CreateStudent", "Account")</p>
 
         </div>
 
