Add course Id to actionlink

--- a/Learny/Views/Courses/Details.cshtml
+++ b/Learny/Views/Courses/Details.cshtml
@@ -37,7 +37,7 @@
         <div class="col-sm-4">
 
             <h2>Elever</h2>
-            <p>@Html.ActionLink("Lägg till elev", "CreateStudent", "Account")</p>
+            <p>@Html.ActionLink("Lägg till elev", "CreateStudent", "Account", new { id = Model.Id }, null)</p>
 
         </div>
 
