--- a/Learny/Views/Account/CreateStudent.cshtml
+++ b/Learny/Views/Account/CreateStudent.cshtml
@@ -13,13 +13,23 @@
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
 
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Courses, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(c => c.CourseId, new SelectList(Model.Courses, "Id", "Name"), "---- välj en kurs från listan ----", new {@class = "form-control"})
+    if (Model.CourseSelected == true)
+    {
+        <div class="form-group">
+            @Html.DisplayFor(model => model.AttendingCourse)
+            @Html.HiddenFor(model => model.CourseId) @*Http post courseId to createStudent action *@
         </div>
-    </div>
+    }
+    else
+    {
+        <div class="form-group">
+            @Html.LabelFor(model => model.Courses, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(c => c.CourseId, new SelectList(Model.Courses, "Id", "Name"), "---- välj en kurs från listan ----", new { @class = "form-control" })
+            </div>
+        </div>
+    }
+
 
 
 
