--- a/Learny/Views/Account/CreateStudent.cshtml
+++ b/Learny/Views/Account/CreateStudent.cshtml
@@ -15,10 +15,11 @@
 
     if (Model.CourseSelected == true)
     {
-        <div class="form-group">
-            @Html.DisplayFor(model => model.AttendingCourse)
+
+        
+            <h4> @Html.DisplayFor(model => model.AttendingCourse)</h4>
             @Html.HiddenFor(model => model.CourseId) @*Http post courseId to createStudent action *@
-        </div>
+        
     }
     else
     {
@@ -37,7 +38,7 @@
         @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
-           @* @Html.ValidationMessageFor(m => m.Name, "En student med samma namn är redan registrerad!", new { @class = "text-danger" })*@
+            @* @Html.ValidationMessageFor(m => m.Name, "En student med samma namn är redan registrerad!", new { @class = "text-danger" })*@
         </div>
     </div>
 
@@ -58,17 +59,17 @@
         </div>
     </div>
 
-    @*<div class="form-group">
-            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+            @*<div class="form-group">
+                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                    </div>
+                </div>*@
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" class="btn btn-default" value="Spara" />
+                </div>
             </div>
-        </div>*@
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Spara" />
-        </div>
-    </div>
 }
 
 @section Scripts {
