--- a/Learny/Views/Shared/_Layout.cshtml
+++ b/Learny/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                 <ul class="nav navbar-nav">
                     @if (User.IsInRole(RoleName.student))
                     {
-                        <li>@Html.ActionLink("Kurs", "Index", "StudentCourse")</li>
+                        <li>@Html.ActionLink("Kurs", "Details", "Courses")</li>
                     }
                     @if (User.IsInRole(RoleName.teacher))
                     {
