--- a/Learny/Views/CourseModules/Edit.cshtml
+++ b/Learny/Views/CourseModules/Edit.cshtml
@@ -1,18 +1,17 @@
-﻿@model Learny.Models.CourseModule
+﻿@model Learny.ViewModels.ModuleViewModel
 
 @{
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
-
+<h2>Redigera</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>CourseModule</h4>
+        <h4>Kurs modul</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -59,14 +58,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Spara" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Tillbaka till modul översikt", "Details", "CourseModules", new { id = Model.Id }, null)
 </div>
 
 @section Scripts {
