--- a/Learny/Views/Courses/Edit.cshtml
+++ b/Learny/Views/Courses/Edit.cshtml
@@ -66,7 +66,7 @@
 }
 
 <div>
-    @Html.ActionLink("Tillbaka till kurslista","Index","Courses")
+    @Html.ActionLink("Tillbaka till kurs översikt", "Details", "Courses", new { id = Model.Id }, null)
 </div>
 
 @section Scripts {
