Refactoring: Rename StudentVM to StudentViewModel

--- a/Learny/Views/Account/CreateStudent.cshtml
+++ b/Learny/Views/Account/CreateStudent.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model Learny.ViewModels.StudentVM
+@model Learny.ViewModels.StudentViewModel
 @{
     ViewBag.Title = "Lägg till en ny elev";
 }
