--- a/Learny/Views/Courses/Details.cshtml
+++ b/Learny/Views/Courses/Details.cshtml
@@ -31,7 +31,8 @@
 
             <p>
                 @Html.ActionLink("Tillbaka till listan", "Index") |
-                @Html.ActionLink("Lägg till modul", "Create", "CourseModules", new { id = Model.Id }, null)
+                @Html.ActionLink("Lägg till modul", "Create", "CourseModules", new { id = Model.Id }, null) |
+                @Html.ActionLink("Ändra", "Edit", new { id = Model.Id})
             </p>
         </div>
         <div class="col-sm-4">
