--- a/Learny/Views/Shared/_Layout.cshtml
+++ b/Learny/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     {
                         <li>@Html.ActionLink("Kurser", "Index", "Courses")</li>
                         <li>@Html.ActionLink("Elever", "CreateStudentFromNavBar", "Account")</li>
-                        <li>@Html.ActionLink("Lärare", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Lärare", "CreateTeacher", "Account")</li>
                     }
                 </ul>
                 @if (User.Identity.IsAuthenticated)
