--- a/Learny/Views/CourseModules/Edit.cshtml
+++ b/Learny/Views/CourseModules/Edit.cshtml
@@ -48,13 +48,7 @@
             </div>
         </div>
 
-        <div class="form-group hidden">
-            @Html.LabelFor(model => model.CourseId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CourseId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CourseId, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        @Html.HiddenFor(model => model.CourseId, new { @class = "control-label col-md-2" })
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
