Change Title to "Elever"

--- a/Learny/Views/Account/ListStudents.cshtml
+++ b/Learny/Views/Account/ListStudents.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Learny.ViewModels.StudentViewModel>
 
 @{
-    ViewBag.Title = "Studenter";
+    ViewBag.Title = "Elever";
 }
 
 <h2>@ViewBag.Title</h2>
