--- a/Learny/Views/Account/CreateStudent.cshtml
+++ b/Learny/Views/Account/CreateStudent.cshtml
@@ -75,6 +75,14 @@
         </div>
 }
 
+@if (TempData["Feedback"] != null)
+{
+    <div class="alert alert-success alert-dismissable fade in">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        @TempData["Feedback"]
+    </div>
+}
+
 @if (Model.CourseSelected == true)
 {
     <hr />
