Change name on StudentViewModel to StudentCreateViewModel

--- a/Learny/Views/Account/CreateStudent.cshtml
+++ b/Learny/Views/Account/CreateStudent.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model Learny.ViewModels.StudentViewModel
+@model Learny.ViewModels.StudentCreateViewModel
 @{
     ViewBag.Title = "Lägg till en ny elev";
 }
