--- a/Learny/Views/Account/ListStudents.cshtml
+++ b/Learny/Views/Account/ListStudents.cshtml
@@ -12,7 +12,7 @@
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.AttendingCourse)
+            @Html.DisplayNameFor(model => model.CourseName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Email)
@@ -28,7 +28,7 @@
                 @Html.ActionLink(item.Name, "StudentDetails", new { email = item.Email })
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.AttendingCourse)
+                @Html.DisplayFor(modelItem => item.CourseName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
