Change header text

--- a/Learny/Views/CourseModules/Create.cshtml
+++ b/Learny/Views/CourseModules/Create.cshtml
@@ -3,8 +3,8 @@
     ViewBag.Title = "Skapa modul";
 }
 
-<h2>Skapa modul</h2>
-<h4>Till kurs: @Html.DisplayFor(model => model.FullCourseName)</h4>
+<h2>Ny modul</h2>
+<h4>Kurs: @Html.DisplayFor(model => model.FullCourseName)</h4>
 
 
 @using (Html.BeginForm()) 
