--- a/Learny/Views/ModuleActivities/Create.cshtml
+++ b/Learny/Views/ModuleActivities/Create.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>@ViewBag.Title</h2>
-<h4>Till modul: @Html.DisplayFor(model => model.ModuleName)</h4>
+<h4>Modul: @Html.DisplayFor(model => model.ModuleName)</h4>
 
 
 @using (Html.BeginForm())
