--- a/Learny/Views/Student/Index.cshtml
+++ b/Learny/Views/Student/Index.cshtml
@@ -25,7 +25,7 @@
 
         <tr>
             <td>
-                @Html.ActionLink(item.Name, "StudentDetails", new { email = item.Email })
+                @Html.ActionLink(item.Name, "Details", new { email = item.Email })
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CourseName)
