--- a/Learny/Views/Courses/Details.cshtml
+++ b/Learny/Views/Courses/Details.cshtml
@@ -44,9 +44,9 @@
             <h2>Elever</h2>
             @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
             {
-                <p>@Html.ActionLink("Lägg till elev", "CreateStudent", "Account", new { id = Model.Id}, null)</p>
+                <p>@Html.ActionLink("Lägg till elev", "Create", "Student", new { id = Model.Id}, null)</p>
             }
-            @Html.Action("Students", "Account", new { id = Model.Id })
+            @Html.Action("Students", "Student", new { id = Model.Id })
         </div>
 
     </div>
