--- a/Learny/Views/Teacher/Create.cshtml
+++ b/Learny/Views/Teacher/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Learny.ViewModels.TeacherViewModel
 
 @{
-    ViewBag.Title = "Lägg till en ny lärare";
+    ViewBag.Title = "Lägg till ny lärare";
 }
 
 <h2>@ViewBag.Title</h2>
@@ -57,7 +57,7 @@
 
     <hr />
     <h4>Lärare</h4>
-    @Html.Action("ListTeachers", "Account")
+    @Html.Action("ListTeachers", "Teacher")
 
 
     @section Scripts {
