Add link to edit

--- a/Learny/Views/CourseModules/Details.cshtml
+++ b/Learny/Views/CourseModules/Details.cshtml
@@ -34,9 +34,9 @@
             @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
             {
                 <p>
-                    @Html.ActionLink("Tillbaka till kursen", "Details", "Courses", new { Id = Model.CourseId }, null)
-                    |
-                    @Html.ActionLink("Lägg till aktivitet", "Create", "ModuleActivities", new { Id = Model.Id }, null)
+                    @Html.ActionLink("Tillbaka till kursen", "Details", "Courses", new { Id = Model.CourseId }, null) |
+                    @Html.ActionLink("Lägg till aktivitet", "Create", "ModuleActivities", new { Id = Model.Id }, null) |
+                    @Html.ActionLink("Ändra", "Edit", new { id = Model.Id })
                 </p>
             }
             else
